--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
+  "version": "1.0.0",
   "name": "cordova-plugin-filechooser",
-  "version": "1.2.0",
-  "description": "Cordova FileChooser Plugin",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ihadeed/cordova-filechooser.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ihadeed/cordova-filechooser/issues"
-  },
-  "homepage": "https://github.com/ihadeed/cordova-filechooser#readme",
+  "author": "don.coleman@gmail.com",
   "cordova": {
     "id": "cordova-plugin-filechooser",
     "platforms": [
-      "android",
-      "windows"
+      "android"
     ]
-  }
+  },
+  "description": "Cordova Plugin that supplies a File Chooser",
+  "license": "Apache License, Version 2.0",
+  "repo": "https://github.com/luckylooke/cordova-filechooser",
+  "issue": "https://github.com/don/cordova-filechooser/issues",
+  "keywords": [],
+  "engines": [
+    {
+      "name": "cordova",
+      "version": ">=2.8.0"
+    }
+  ]
 }
